force-app/main/default/objects/Servico__c/Servico__c.object-meta.xml
<CustomObject>
    <label>Serviço</label>
    <nameField>
        <displayFormat>SERV-{0000000}</displayFormat>
        <label>Serviço</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Serviços</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>