force-app/main/default/objects/Servico__c/fields/CampoPesquisa__c.field-meta.xml
<CustomField>
    <fullName>CampoPesquisa__c</fullName>
    <label>Campo Pesquisa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>