force-app/main/default/objects/Servico__c/fields/ComplementoEndereco__c.field-meta.xml
<CustomField>
    <fullName>ComplementoEndereco__c</fullName>
    <label>Complemento Endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>