force-app/main/default/objects/Servico__c/fields/ContaComprador__c.field-meta.xml
<CustomField>
    <fullName>ContaComprador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta Comprador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Serviços (Conta Comprador)</relationshipLabel>
    <relationshipName>ServicosComprador</relationshipName>
    <type>Lookup</type>
</CustomField>