force-app/main/default/objects/Servico__c/fields/ContaFaturamento__c.field-meta.xml
<CustomField>
    <fullName>ContaFaturamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta Faturamento</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Serviços</relationshipLabel>
    <relationshipName>Servicos</relationshipName>
    <type>Lookup</type>
</CustomField>