force-app/main/default/objects/Servico__c/fields/DataServico__c.field-meta.xml
<CustomField>
    <fullName>DataServico__c</fullName>
    <label>Data do Serviço</label>
    <type>DateTime</type>
</CustomField>