force-app/main/default/objects/Servico__c/fields/EnderecoServico__c.field-meta.xml
<CustomField>
    <fullName>EnderecoServico__c</fullName>
    <label>Endereço Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>