force-app/main/default/objects/Servico__c/fields/Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Faturamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faturamento</label>
    <referenceTo>Faturamento__c</referenceTo>
    <relationshipLabel>Serviços</relationshipLabel>
    <relationshipName>Servicos</relationshipName>
    <type>Lookup</type>
</CustomField>