force-app/main/default/objects/Servico__c/fields/LancamentoRevoSeat__c.field-meta.xml
<CustomField>
    <fullName>LancamentoRevoSeat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lançamento Revo Seat</label>
    <referenceTo>LancamentoRevoSeat__c</referenceTo>
    <relationshipLabel>Serviços</relationshipLabel>
    <relationshipName>Servicos</relationshipName>
    <type>Lookup</type>
</CustomField>