force-app/main/default/objects/Servico__c/fields/NomeOportunidade__c.field-meta.xml
<CustomField>
    <fullName>NomeOportunidade__c</fullName>
    <formula>Oportunidade__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Oportunidade</label>
    <type>Text</type>
</CustomField>