force-app/main/default/objects/Servico__c/fields/NomeTipoRegistro__c.field-meta.xml
<CustomField>
    <fullName>NomeTipoRegistro__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Tipo de Registro</label>
    <type>Text</type>
</CustomField>