force-app/main/default/objects/Servico__c/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <label>Observações</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>