force-app/main/default/objects/Servico__c/fields/PagoRevoSeats__c.field-meta.xml
<CustomField>
    <fullName>PagoRevoSeats__c</fullName>
    <label>Pago RevoSeats</label>
    <summarizedField>Empenho__c.RevoSeatEmpenhado__c</summarizedField>
    <summaryForeignKey>Empenho__c.Servico__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>