force-app/main/default/objects/Servico__c/fields/PaisServico__c.field-meta.xml
<CustomField>
    <fullName>PaisServico__c</fullName>
    <label>País Serviço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>