force-app/main/default/objects/Servico__c/fields/Passageiro__c.field-meta.xml
<CustomField>
    <fullName>Passageiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passageiro</label>
    <referenceTo>Passageiro__c</referenceTo>
    <relationshipLabel>Serviços</relationshipLabel>
    <relationshipName>Servicos</relationshipName>
    <type>Lookup</type>
</CustomField>