force-app/main/default/objects/Servico__c/fields/ProdutoOportunidade__c.field-meta.xml
<CustomField>
    <fullName>ProdutoOportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto de oportunidade</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Serviços</relationshipLabel>
    <relationshipName>Servicos</relationshipName>
    <type>Lookup</type>
</CustomField>