force-app/main/default/objects/Servico__c/fields/PromocaoParceiro__c.field-meta.xml
<CustomField>
    <fullName>PromocaoParceiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoção Parceiro</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CodigoPromocional__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Promoção Parceiro</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CodigoPromocional__c</referenceTo>
    <relationshipLabel>Serviços</relationshipLabel>
    <relationshipName>Servicos</relationshipName>
    <type>Lookup</type>
</CustomField>