force-app/main/default/objects/Servico__c/fields/QtdsMalasGrandes__c.field-meta.xml
<CustomField>
    <fullName>QtdsMalasGrandes__c</fullName>
    <label>Qtds. Malas Grandes</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>