force-app/main/default/objects/Servico__c/fields/QtdsMalasPequenas__c.field-meta.xml
<CustomField>
    <fullName>QtdsMalasPequenas__c</fullName>
    <label>Qtds. Malas Pequenas</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>