force-app/main/default/objects/Servico__c/fields/ServicoPromocao__c.field-meta.xml
<CustomField>
    <fullName>ServicoPromocao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serviço Promoção</label>
    <referenceTo>Servico__c</referenceTo>
    <relationshipLabel>Serviços</relationshipLabel>
    <relationshipName>Servicos</relationshipName>
    <type>Lookup</type>
</CustomField>