force-app/main/default/objects/Servico__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando Execução</fullName>
            </value>
            <value>
                <fullName>PreReservado</fullName>
                <label>Pré-Reservado</label>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
            <value>
                <fullName>Executado</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
            <value>
                <fullName>Faturado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>