force-app/main/default/objects/Servico__c/fields/TotalRevoSeats__c.field-meta.xml
<CustomField>
    <fullName>TotalRevoSeats__c</fullName>
    <label>Total RevoSeats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>