force-app/main/default/objects/Servico__c/fields/ValorPago__c.field-meta.xml
<CustomField>
    <fullName>ValorPago__c</fullName>
    <label>Valor Pago</label>
    <summarizedField>Empenho__c.ValorEmpenho__c</summarizedField>
    <summaryForeignKey>Empenho__c.Servico__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>