force-app/main/default/objects/Servico__c/recordTypes/CharterFlight.recordType-meta.xml
<RecordType>
    <fullName>CharterFlight</fullName>
    <active>true</active>
    <label>Charter Flight</label>
</RecordType>