force-app/main/default/objects/Servico__c/recordTypes/CobrancaParceiro.recordType-meta.xml
<RecordType>
    <fullName>CobrancaParceiro</fullName>
    <active>true</active>
    <label>Cobrança Parceiro</label>
</RecordType>