force-app/main/default/objects/Servico__c/recordTypes/FullCabin.recordType-meta.xml
<RecordType>
    <fullName>FullCabin</fullName>
    <active>true</active>
    <label>Full Cabin</label>
</RecordType>