force-app/main/default/objects/Servico__c/recordTypes/RevoSeats.recordType-meta.xml
<RecordType>
    <fullName>RevoSeats</fullName>
    <active>true</active>
    <label>Revo Seats</label>
</RecordType>