force-app/main/default/objects/Servico__c/recordTypes/ServicosTaxas.recordType-meta.xml
<RecordType>
    <fullName>ServicosTaxas</fullName>
    <active>true</active>
    <label>Serviços e Taxas</label>
</RecordType>