force-app/main/default/objects/Servico__c/recordTypes/ShuttleSeat.recordType-meta.xml
<RecordType>
    <fullName>ShuttleSeat</fullName>
    <active>true</active>
    <label>Shuttle Seat</label>
</RecordType>