force-app/main/default/objects/Servico__c/validationRules/Bloquei_Pagamento_a_Maior.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquei_Pagamento_a_Maior</fullName>
    <active>true</active>
    <errorConditionFormula>ValorPago__c &gt; ValorTotal__c</errorConditionFormula>
    <errorMessage>Pagamento do Serviço não pode ser superior ao Valor do Serviço!</errorMessage>
</ValidationRule>