force-app/main/default/objects/Servico__c/validationRules/Impede_vincular_faturamento_fechado.validationRule-meta.xml
<ValidationRule>
    <fullName>Impede_vincular_faturamento_fechado</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
				AND(ISCHANGED(Faturamento__c), OR(ISPICKVAL(Faturamento__r.Status__c, &quot;Fechado&quot;), ISPICKVAL(Faturamento__r.Status__c, &quot;Emitido&quot;))),
			 AND(ISCHANGED(Faturamento__c), ISPICKVAL(Status__c, &apos;Faturado&apos;) ) 
)</errorConditionFormula>
    <errorDisplayField>Faturamento__c</errorDisplayField>
    <errorMessage>Faturamento possui Status que não permite alteração</errorMessage>
</ValidationRule>